--- a/style.css
+++ b/style.css
@@ -105,6 +105,13 @@ button.suivant{
     background-color: rgba(0, 0, 0, 0.5);
     display: flex;
     justify-content: center;
+    padding: 20px;
+    font-size: 70px;
+  }
+  hr{
+    width: 100%;
+    height: 5px;
+    background-color: rgba(82, 2, 2, 0.5);
   }
   .info2 {
     position: absolute;
@@ -204,4 +211,8 @@ nav ul li a:hover {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+button:hover{
+  background-color: rgb(5, 121, 1);
+  color: white;;
 }
